--- a/aboutus.html
+++ b/aboutus.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À propos de nous</title>
+    <title>About Us</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="aboutus.css">
 </head>
 
 <body>
 
-    <!-- En-tête -->
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li><a href="actualites.html">Green News</a></li>
                 <li>
                     <a href="cart.html"><i class="bx bx-cart"></i></a>
                     <a id="user-link"><i class="bx bxs-user-circle"></i></a>
@@ -31,52 +31,54 @@
         </nav>
     </header>
 
-    <!-- Section principale "À propos de nous" -->
+    <!-- Main "About Us" Section -->
     <div class="about-section">
         <div class="manager-photo">
             <img src="aboutus.jpg" alt="Rémi Mazoyer">
         </div>
         <div class="about-content">
-            <h1>À propos de nous</h1>
+            <h1>About Us</h1>
             <div class="manager-info">
                 <h3>Rémi Mazoyer</h3>
-                <p>Profession : Arboriste</p>
-                <p>Email : <a href="mailto:remi.mazoyer@example.com">remi.mazoyer@example.com</a></p>
+                <p>Profession: Arborist</p>
+                <p>Email: <a href="mailto:remi.mazoyer@example.com">remi.mazoyer@example.com</a></p>
             </div>
-            <p>Bonjour et bienvenue chez L'Arbre Envie. Je m’appelle Rémi Mazoyer, j’ai 45 ans, et je suis passionné de nature, de travail manuel et de bien-être que l’on peut ressentir en forêt, dans les arbres, dans vos jardins ou sur un tatami par la pratique de l'Aikido. Après une première carrière en tant qu’ingénieur en environnement spécialisé en dépollution biologique, j'ai décidé de me reconvertir pour m’orienter vers un métier manuel, plus proche des gens et d'un extérieur plus sain que le milieu industriel avec le désir de rendre service.
+            <p>Hello and welcome to L'Arbre Envie. My name is Rémi Mazoyer, I am 45 years old, and I am passionate about nature, manual work, and the sense of well-being one can feel in a forest, among trees, in your gardens, or on a tatami practicing Aikido. After a first career as an environmental engineer specializing in biological decontamination, I decided to switch to a more hands-on profession, closer to people and a healthier environment than the industrial sector, with the desire to help.
 
-                Fort d’une formation pluridisciplinaire en microbiologie et en génie des procédés, j’ai eu l’opportunité de travailler en tant qu’ingénieur dans le secteur environnemental. Ce parcours m’a permis d’acquérir une solide expertise dans la gestion des sols et des procédés industriels liés à leur dépollution. Après la fin soudaine d’un contrat en entreprise, j’ai ressenti le besoin profond de rebondir et de retrouver un métier de terrain, proche de la nature et des valeurs humaines, alliant réflexion, effort physique et créativité.
+                With a multidisciplinary background in microbiology and process engineering, I had the opportunity to work as an engineer in the environmental sector. This journey allowed me to acquire solid expertise in soil management and industrial processes related to their decontamination. After the sudden end of a contract with a company, I felt a deep need to bounce back and find a field-based job, close to nature and human values, combining thought, physical effort, and creativity.
 
-                En 2018, j’ai obtenu un Certificat de spécialisation en taille et soin des arbres. Cette formation spécialisée m’a permis d'apprendre les compétences nécessaires pour prendre soin des arbres, les entretenir avec précision et assurer leur bonne santé. Cette démarche de reconversion, bien que radicale à l'époque, reste une évidence pour moi encore à ce jour, même après 8 ans : elle réunit mon amour des arbres, des jardins et le contact clientèle.
+                In 2018, I obtained a Specialization Certificate in Tree Pruning and Care. This specialized training allowed me to learn the skills necessary to care for trees, maintain them with precision, and ensure their health. This career change, though radical at the time, remains an obvious choice for me even after eight years: it brings together my love for trees, gardens, and client interaction.
 
-                Aujourd’hui, l'Arbre Envie et ses collaborateurs mettent à votre service, leurs compétences, savoir-faire et moyens matériels pour répondre au mieux à vos demandes.
+                Today, L'Arbre Envie and its team offer their skills, expertise, and equipment to meet your needs in the best possible way.
 
-                Mon travail s’appuie sur des valeurs fortes : rigueur, respect du vivant et amour du travail bien fait. Ma devise, qui guide chacune de mes interventions, est simple : “Soit on fait son travail correctement et avec Envie, soit on ne le fait pas.” Chaque projet est pour moi une occasion de mettre en œuvre cette philosophie de vie. Si vous recherchez un professionnel passionné, qualifié et à l’écoute pour l’entretien de vos arbres et jardins, n’hésitez pas à me contacter. Je serais ravi de vous accompagner dans vos projets.
+                My work is based on strong values: rigor, respect for life, and love for well-done work. My motto, which guides every one of my actions, is simple: "Either you do your job properly and with Passion, or you don't do it at all." Every project is an opportunity for me to apply this philosophy of life. If you are looking for a passionate, qualified, and attentive professional to care for your trees and gardens, do not hesitate to contact me. I would be delighted to assist you with your projects.
+            </p>
+            <p>
+                See you soon,<br>
 
-                À très bientôt,
-                Rémi Mazoyer</p>
+            </p>
         </div>
     </div>
 
-    <!-- Pied de page -->
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 L'Arbre Envie - Tous droits réservés</p>
+        <p>&copy; 2024 L'Arbre Envie - All Rights Reserved</p>
     </footer>
 
     <script src="theme.js"></script>
 
-    <!-- Bouton de changement de thème -->
+    <!-- Theme Toggle Button -->
     <div id="theme-toggle">
-        <button id="theme-toggle-btn" title="Changer le thème">
+        <button id="theme-toggle-btn" title="Change Theme">
             <i class="bx bx-sun"></i>
         </button>
     </div>
     <script src="auth.js"></script>
-<script>
-    document.addEventListener("DOMContentLoaded", () => {
-        checkUserLink("user-link");
-    });
-</script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            checkUserLink("user-link");
+        });
+    </script>
 </body>
 
 </html>
