--- a/actu6.html
+++ b/actu6.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choisir les arbres et arbustes</title>
+    <title>Choosing Trees and Shrubs</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="actu.css">
 </head>
 
 <body>
-    <!-- En-tête -->
-   
-    <!-- En-tête -->
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li><a href="actualites.html">Green News</a></li>
                 <li>
                     <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
                     <a href="connection.html"><i class="bx bxs-user-circle"></i></a>
@@ -32,62 +30,62 @@
         </nav>
     </header>
 
-    <!-- Retour aux actualités -->
+    <!-- Back to News -->
     <section class="return-link">
-        <a href="actualites.html"><i class="bx bx-left-arrow-alt"></i> Retour aux Actualités</a>
+        <a href="actualites.html"><i class="bx bx-left-arrow-alt"></i> Back to News</a>
     </section>
 
-    <!-- Contenu principal -->
+    <!-- Main Content -->
     <main>
         <section class="content">
-            <h1>Choisir les arbres et arbustes</h1>
+            <h1>Choosing Trees and Shrubs</h1>
             <p class="description">
-                Cette fiche pratique <strong>"Choisir les arbres et arbustes"</strong> propose des conseils essentiels pour sélectionner et planter les végétaux adaptés à votre environnement.
-                Ce guide vous aide à faire des choix éclairés selon :
+                This practical guide <strong>"Choosing Trees and Shrubs"</strong> offers essential advice for selecting and planting vegetation suited to your environment.
+                This guide helps you make informed choices based on:
             </p>
             <ul>
-                <li>Le climat et le sol de votre région.</li>
-                <li>Les espaces disponibles dans votre jardin.</li>
-                <li>Les spécificités et besoins des arbres et arbustes.</li>
+                <li>The climate and soil of your region.</li>
+                <li>The available space in your garden.</li>
+                <li>The specific needs and characteristics of trees and shrubs.</li>
             </ul>
             <p>
-                Ce document est idéal pour les passionnés de jardinage souhaitant optimiser l'aménagement de leur espace vert tout en favorisant la biodiversité.
-                Utilisez les flèches pour parcourir les pages et découvrir des recommandations adaptées.
+                This document is ideal for gardening enthusiasts looking to optimize the layout of their green spaces while promoting biodiversity.
+                Use the arrows to browse the pages and discover tailored recommendations.
             </p>
         </section>
 
-        <!-- Visionneuse PDF -->
+        <!-- PDF Viewer -->
         <section class="pdf-viewer">
             <div class="navigation">
-                <button id="prevPage"><i class="bx bx-chevron-left"></i> Précédent</button>
-                <button id="nextPage">Suivant <i class="bx bx-chevron-right"></i></button>
+                <button id="prevPage"><i class="bx bx-chevron-left"></i> Previous</button>
+                <button id="nextPage">Next <i class="bx bx-chevron-right"></i></button>
                 <button id="zoomBtn"><i class="bx bx-zoom-in"></i> Zoom</button>
             </div>
             <canvas id="pdfCanvas"></canvas>
-            <p class="page-info">Page : <span id="pageNum"></span> / <span id="pageCount"></span></p>
+            <p class="page-info">Page: <span id="pageNum"></span> / <span id="pageCount"></span></p>
         </section>
     </main>
 
-    <!-- Pied de page -->
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 L'Arbre Envie. Tous droits réservés.</p>
+        <p>&copy; 2024 L'Arbre Envie. All rights reserved.</p>
     </footer>
 
-    <!-- Script JS pour le PDF -->
+    <!-- JS Script for PDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <script>
-        const url = 'Fiche_4_choix_arbres-arbustes_et_imprim_A3.pdf'; // Lien vers le PDF
+        const url = 'Fiche_4_choix_arbres-arbustes_et_imprim_A3.pdf'; // Link to the PDF
 
         let pdfDoc = null,
             pageNum = 1,
             pageIsRendering = false,
             pageNumIsPending = null;
 
-        const scale = 1, // Réduction de la taille du PDF
+        const scale = 1, // PDF scaling
             canvas = document.getElementById('pdfCanvas'),
             ctx = canvas.getContext('2d');
 
-        // Charger le PDF
+        // Load the PDF
         const renderPage = (num) => {
             pageIsRendering = true;
 
@@ -138,7 +136,7 @@
             queueRenderPage(pageNum);
         };
 
-        // Fonction pour ouvrir le PDF en grand
+        // Function to open the PDF in full screen
         const openPDFInNewTab = () => {
             window.open(url, '_blank');
         };
@@ -156,12 +154,12 @@
         document.getElementById('zoomBtn').addEventListener("click", openPDFInNewTab);
     </script>
 
-    <!-- Script pour le changement de thème -->
+    <!-- Script for Theme Change -->
     <script src="theme.js"></script>
 
-    <!-- Bouton de changement de thème -->
+    <!-- Theme Toggle Button -->
     <div id="theme-toggle">
-        <button id="theme-toggle-btn" title="Changer le thème">
+        <button id="theme-toggle-btn" title="Change Theme">
             <i class="bx bx-sun"></i>
         </button>
     </div>
