--- a/actualites.html
+++ b/actualites.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -11,106 +11,93 @@
 
 <body>
 
-    <!-- En-tête -->
-   
-    <!-- En-tête -->
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li><a href="actualites.html">Green Info</a></li>
                 <li>
                     <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
-                    <a id="user-link"><i class="bx bxs-user-circle"></i></a>
+                    <a href="connection.html"><i class="bx bxs-user-circle"></i></a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <!-- Section des articles de news -->
+    <!-- News Articles Section -->
     <main>
         <section class="news-container">
             <!-- Article 1 -->
             <div class="news-article">
-                <img src="2021-BD-bon-arbre-1.pdf">
-                <h2>Bon Arbre, Bon Endroit</h2>
-                <p>Découvrez les conseils essentiels pour planter les bons arbres au bon endroit et préserver leur santé.</p>
-                <a href="actu1.html" class="read-more">Lire plus</a>
+                <img src="Respect.png">
+                <h2>Respect the Trees</h2>
+                <p>Learn the best practices for pruning and maintaining your trees safely.</p>
+                <a href="actu4.html" class="read-more">Read more</a>
             </div>
 
             <!-- Article 2 -->
             <div class="news-article">
-                <img src="2021-BD-les-racines-du-mal.pdf">
-                <h2>Les Racines du Mal</h2>
-                <p>Explorez les défis liés aux racines invasives et apprenez comment les gérer efficacement.</p>
-                <a href="actu2.html" class="read-more">Lire plus</a>
+                <img src="RACINES.png">
+                <h2>The Roots of Evil</h2>
+                <p>Explore challenges related to invasive roots and learn how to manage them effectively.</p>
+                <a href="actu2.html" class="read-more">Read more</a>
             </div>
 
             <!-- Article 3 -->
             <div class="news-article">
-                <img src="2021-BD-mort-dun-chene.pdf">
-                <h2>Mort d'un Chêne</h2>
-                <p>Découvrez les raisons de la mort prématurée des arbres et comment éviter ces problèmes.</p>
-                <a href="actu3.html" class="read-more">Lire plus</a>
+                <img src="dead.png">
+                <h2>Death of an Oak</h2>
+                <p>Discover the reasons behind premature tree death and how to prevent these issues.</p>
+                <a href="actu3.html" class="read-more">Read more</a>
             </div>
 
             <!-- Article 4 -->
             <div class="news-article">
-                <img src="2021-plaquette-respectons-les-arbres.pdf">
-                <h2>Respectons les Arbres</h2>
-                <p>Apprenez les bonnes pratiques pour élaguer et entretenir vos arbres en toute sécurité.</p>
-                <a href="actu4.html" class="read-more">Lire plus</a>
+                <img src="Bon-Arbre.png">
+                <h2>Right Tree, Right Place</h2>
+                <p>Learn essential tips for planting the right trees in the right place to preserve their health.</p>
+                <a href="actu1.html" class="read-more">Read more</a>
             </div>
 
             <!-- Article 5 -->
             <div class="news-article">
-                <img src="BD-Tailler-ou-ne-pas-tailler-2-1.pdf">
-                <h2>Tailler ou ne pas Tailler</h2>
-                <p>Découvrez quand et comment tailler vos arbres sans compromettre leur croissance.</p>
-                <a href="actu5.html" class="read-more">Lire plus</a>
+                <img src="cut.png">
+                <h2>To Prune or Not to Prune</h2>
+                <p>Discover when and how to prune your trees without compromising their growth.</p>
+                <a href="actu5.html" class="read-more">Read more</a>
             </div>
 
             <!-- Article 6 -->
             <div class="news-article">
-                <img src="Fiche_4_choix_arbres-arbustes_et_imprim_A3.pdf">
-                <h2>Choisir les arbres et arbustes</h2>
-                <p>Des conseils pour sélectionner les arbres et arbustes adaptés à votre jardin et votre climat.</p>
-                <a href="actu6.html" class="read-more">Lire plus</a>
+                <img src="tree.png">
+                <h2>Choosing Trees and Shrubs</h2>
+                <p>Advice on selecting trees and shrubs suited to your garden and climate.</p>
+                <a href="actu6.html" class="read-more">Read more</a>
             </div>
         </section>
     </main>
 
-    <!-- Pied de page -->
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 L'Arbre Envie. Tous droits réservés.</p>
+        <p>&copy; 2024 L'Arbre Envie. All rights reserved.</p>
     </footer>
-
 
     <script src="theme.js"></script>
 
-       <!-- Bouton de changement de thème -->
-       <div id="theme-toggle">
-        <button id="theme-toggle-btn" title="Changer le thème">
+    <!-- Theme Toggle Button -->
+    <div id="theme-toggle">
+        <button id="theme-toggle-btn" title="Change Theme">
             <i class="bx bx-sun"></i>
         </button>
     </div>
 
-    <script src="auth.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            checkUserLink("user-link");
-        });
-    </script>
-    
-    </body>
-    </html>
-    
 </body>
 
 </html>
