--- a/manage-orders.html
+++ b/manage-orders.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestion des Produits</title>
+    <title>Order Management</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="manage-orders.css">
 </head>
@@ -32,7 +32,7 @@
             <button onclick="toggleVisibility('order-list')" class="toggle-button">Show Orders</button>
         </div>
         <div id="order-list" class="toggle-content">
-            <!-- le contenu des commandes s'affiche ici -->
+            <!-- Order content will be displayed here -->
         </div>
     </section>
 </main>
@@ -42,25 +42,25 @@
 </footer>
 
 <script>
-// Fonction pour récupérer les commandes triées
+// Function to fetch sorted orders
 async function fetchSortedOrders(sort = 'created_at_desc') {
     try {
         const response = await fetch(`http://localhost:3000/api/orders?sort=${sort}`);
-        if (!response.ok) throw new Error('Erreur lors de la récupération des commandes.');
+        if (!response.ok) throw new Error('Error fetching orders.');
         const orders = await response.json();
         displayOrders(orders);
     } catch (error) {
-        console.error('Erreur dans fetchSortedOrders:', error);
+        console.error('Error in fetchSortedOrders:', error);
     }
 }
 
-// Afficher les commandes dans la liste
+// Display orders in the list
 function displayOrders(orders) {
     const orderList = document.getElementById('order-list');
-    orderList.innerHTML = ''; // Vider le contenu précédent
+    orderList.innerHTML = ''; // Clear previous content
 
     if (orders.length === 0) {
-        orderList.innerHTML = '<p>Aucune commande trouvée.</p>';
+        orderList.innerHTML = '<p>No orders found.</p>';
         return;
     }
 
@@ -69,37 +69,37 @@ function displayOrders(orders) {
         orderItem.classList.add('admin-item');
         const cartItems = order.cart_items;
 
-        orderItem.id = `order-${order.order_id}`; // Ajout d'un ID unique pour chaque commande
+        orderItem.id = `order-${order.order_id}`; // Add a unique ID for each order
 
         orderItem.innerHTML = `
             <h3>Order #F56HDKSB${order.order_id}</h3>
             <p>Client: ${order.username}</p>
-            <p>ID du client: ${order.user_id}</p>
-            <p>Prix total: €${order.total_price.toFixed(2)}</p>
-            <p>Paiement effectué le: ${new Date(order.created_at).toLocaleString()}</p>
-            <p>Jour de récupération de la commande: ${new Date(order.pickup_date).toLocaleDateString()}</p>
-            <p>Créneau horaire: ${order.pickup_slot}</p>
-            <p>Détail de la commande:</p>
+            <p>Client ID: ${order.user_id}</p>
+            <p>Total Price: €${order.total_price.toFixed(2)}</p>
+            <p>Payment Date: ${new Date(order.created_at).toLocaleString()}</p>
+            <p>Pickup Date: ${new Date(order.pickup_date).toLocaleDateString()}</p>
+            <p>Pickup Slot: ${order.pickup_slot}</p>
+            <p>Order Details:</p>
             <ul>
                 ${cartItems.map(item => `<li>${item.name} - €${item.price.toFixed(2)} x ${item.quantity}</li>`).join('')}
             </ul>
             <div class="order-actions">
                 <button onclick="cancelOrder(${order.order_id})">Cancel Order</button>
-                <button onclick="markAsPickedUp(${order.order_id})">Commande Récupérée</button>
+                <button onclick="markAsPickedUp(${order.order_id})">Mark as Picked Up</button>
             </div>
         `;
         orderList.appendChild(orderItem);
     });
 }
 
-// Fonction pour appliquer le filtre
+// Filter orders
 function filterOrders() {
     const filter = document.getElementById('order-filter').value;
     console.log(`Applying filter: ${filter}`);
-    fetchSortedOrders(filter); // Récupérer et afficher les commandes triées
+    fetchSortedOrders(filter); // Fetch and display sorted orders
 }
 
-// Fonction pour marquer la commande comme récupérée (affichage seulement)
+// Mark order as picked up
 async function markAsPickedUp(orderId) {
     try {
         const response = await fetch(`http://localhost:3000/api/orders/${orderId}`, {
@@ -108,34 +108,30 @@ async function markAsPickedUp(orderId) {
                 'Content-Type': 'application/json',
             },
             body: JSON.stringify({
-                status: 'picked_up',  // Statut mis à jour
+                status: 'picked_up', // Updated status
             }),
         });
 
         if (!response.ok) {
-            throw new Error('Erreur lors de la mise à jour du statut de la commande.');
+            throw new Error('Error updating order status.');
         }
 
         const result = await response.json();
         console.log(result.message);
 
-        // Si la commande est marquée comme récupérée, cachez l'élément de la liste
+        // Hide the order from the list if marked as picked up
         const orderItem = document.getElementById(`order-${orderId}`);
         if (orderItem) {
-            orderItem.style.display = 'none';  // Masquer la commande
+            orderItem.style.display = 'none'; // Hide the order
         }
 
-        alert('La commande a été marquée comme récupérée.');
+        alert('The order has been marked as picked up.');
     } catch (error) {
-        console.error('Erreur dans markAsPickedUp:', error);
+        console.error('Error in markAsPickedUp:', error);
     }
 }
 
-
-
-
-
-// Fonction pour annuler une commande
+// Cancel an order
 async function cancelOrder(orderId) {
     try {
         const response = await fetch(`http://localhost:3000/api/orders/${orderId}`, {
@@ -143,30 +139,30 @@ async function cancelOrder(orderId) {
         });
 
         if (!response.ok) {
-            throw new Error('Erreur lors de l\'annulation de la commande.');
+            throw new Error('Error canceling the order.');
         }
 
         const result = await response.json();
         console.log(result.message);
 
-        // Retirer la commande de l'affichage après annulation
+        // Remove the order from the display after cancellation
         const orderItem = document.getElementById(`order-${orderId}`);
         if (orderItem) {
-            orderItem.remove(); // Supprimer l'élément de la liste
+            orderItem.remove(); // Remove the order element
         }
 
-        alert('La commande a été annulée avec succès');
+        alert('The order has been successfully canceled.');
     } catch (error) {
-        console.error('Erreur dans cancelOrder:', error);
+        console.error('Error in cancelOrder:', error);
     }
 }
 
-// Charger les commandes triées par défaut à l'ouverture de la page
+// Load sorted orders by default when the page loads
 window.addEventListener('DOMContentLoaded', () => {
-    fetchSortedOrders('created_at_desc'); // Tri par défaut
+    fetchSortedOrders('created_at_desc'); // Default sorting
 });
 
-// Fonction pour afficher ou masquer les commandes
+// Toggle order visibility
 function toggleVisibility(elementId) {
     const element = document.getElementById(elementId);
     if (element.style.display === 'none' || element.style.display === '') {
