--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Politique de Confidentialité</title>
+    <title>Privacy Policy</title>
     <link rel="stylesheet" href="privacy-policy.css">
 </head>
 <body>
@@ -13,50 +13,50 @@
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
-                <li><a href="terms.html">Termes et conditions</a></li>
+                <li><a href="actualites.html">Green News</a></li>
+                <li><a href="terms.html">Terms and Conditions</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="privacy-policy">
-            <h1>Politique de Confidentialité</h1>
+            <h1>Privacy Policy</h1>
 
-            <p>Bienvenue sur notre site. Votre confidentialité est d'une grande importance pour nous. Cette politique de confidentialité explique comment nous collectons, utilisons, et protégeons vos informations personnelles lorsque vous utilisez notre site.</p>
+            <p>Welcome to our website. Your privacy is very important to us. This privacy policy explains how we collect, use, and protect your personal information when you use our site.</p>
 
-            <h2>1. Collecte des Informations</h2>
-            <p>Nous collectons des informations personnelles, telles que votre nom, adresse e-mail, et informations de paiement lorsque vous vous inscrivez ou effectuez un achat sur notre site. Nous collectons également des informations non personnelles, comme les données de navigation et l'utilisation des cookies.</p>
+            <h2>1. Information Collection</h2>
+            <p>We collect personal information such as your name, email address, and payment details when you sign up or make a purchase on our site. We also collect non-personal information, such as browsing data and cookie usage.</p>
 
-            <h2>2. Utilisation des Informations</h2>
-            <p>Les informations collectées sont utilisées pour améliorer votre expérience sur notre site, personnaliser le contenu, vous envoyer des offres et promotions, et pour assurer le bon fonctionnement du site.</p>
+            <h2>2. Use of Information</h2>
+            <p>The information collected is used to improve your experience on our site, personalize content, send you offers and promotions, and ensure the proper functioning of the site.</p>
 
-            <h2>3. Partage des Informations</h2>
-            <p>Nous ne partageons pas vos informations personnelles avec des tiers, sauf si cela est nécessaire pour le traitement de vos commandes ou pour se conformer à la loi.</p>
+            <h2>3. Sharing of Information</h2>
+            <p>We do not share your personal information with third parties unless it is necessary for processing your orders or to comply with the law.</p>
 
             <h2>4. Cookies</h2>
-            <p>Nous utilisons des cookies pour améliorer votre expérience sur notre site. Ces cookies sont utilisés pour analyser l'utilisation du site et personnaliser les publicités. Vous pouvez gérer ou refuser les cookies dans les paramètres de votre navigateur.</p>
+            <p>We use cookies to enhance your experience on our site. These cookies are used to analyze site usage and personalize advertisements. You can manage or refuse cookies in your browser settings.</p>
 
-            <h2>5. Sécurité des Informations</h2>
-            <p>Nous prenons des mesures de sécurité pour protéger vos informations personnelles contre tout accès non autorisé, altération ou destruction.</p>
+            <h2>5. Information Security</h2>
+            <p>We take security measures to protect your personal information from unauthorized access, alteration, or destruction.</p>
 
-            <h2>6. Vos Droits</h2>
-            <p>Vous avez le droit d'accéder à vos informations personnelles, de les corriger, de les supprimer, et de vous opposer à leur traitement dans certaines circonstances. Pour exercer ces droits, veuillez nous contacter.</p>
+            <h2>6. Your Rights</h2>
+            <p>You have the right to access your personal information, correct it, delete it, and object to its processing in certain circumstances. To exercise these rights, please contact us.</p>
 
-            <h2>7. Modifications de la Politique</h2>
-            <p>Nous pouvons mettre à jour cette politique de confidentialité de temps en temps. Toutes les modifications seront publiées sur cette page avec la date de mise à jour.</p>
+            <h2>7. Policy Changes</h2>
+            <p>We may update this privacy policy from time to time. Any changes will be posted on this page with the updated date.</p>
 
             <h2>8. Contact</h2>
-            <p>Si vous avez des questions ou des préoccupations concernant cette politique de confidentialité, veuillez nous contacter à <a href="mailto:contact@arbre-envie.com">contact@arbre-envie.com</a>.</p>
+            <p>If you have any questions or concerns regarding this privacy policy, please contact us at <a href="mailto:contact@arbre-envie.com">contact@arbre-envie.com</a>.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 L'Arbre Envie - Tous droits réservés</p>
+        <p>&copy; 2024 L'Arbre Envie - All rights reserved</p>
     </footer>
 </body>
 </html>
