--- a/project.html
+++ b/project.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À propos de nous</title>
+    <title>About Us</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="project.css">
 </head>
 
 <body>
 
-    <!-- En-tête -->
-     <!-- En-tête -->
-     <header>
+    <!-- Header -->
+    <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li><a href="actualites.html">Green News</a></li>
                 <li>
                     <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
                     <a id="user-link"><i class="bx bxs-user-circle"></i></a>
@@ -32,45 +31,45 @@
         </nav>
     </header>
 
-    <!-- Contenu de la galerie -->
+    <!-- Gallery Content -->
     <main>
         <section class="gallery-container">
-            <h1>Service réalisé par l'Arbre Envie</h1>
-            <p>Découvrez nos services précédents en matière d'entretien de jardin, débroussaillage, création, tailles et soins aux arbres.</p>
+            <h1>Services Provided by L'Arbre Envie</h1>
+            <p>Explore our previous services in garden maintenance, brush clearing, creation, pruning, and tree care.</p>
             <div class="gallery-grid">
-                <!-- Chantier 1 -->
+                <!-- Project 1 -->
                 <a href="project-entretient.html" class="gallery-link">
-                    <div class="gallery-item" data-type="Entretient de jardin" data-date="2024">
-                        <img src="entretient.jpg" alt="Entretient de jardin">
+                    <div class="gallery-item" data-type="Garden Maintenance" data-date="2024">
+                        <img src="entretient.jpg" alt="Garden Maintenance">
                         <div class="gallery-info">
-                            <h2>Entretient de jardin</h2>
+                            <h2>Garden Maintenance</h2>
                         </div>
                     </div>
                 </a>
-                <!-- Chantier 2 -->
+                <!-- Project 2 -->
                 <a href="project-debrous.html" class="gallery-link">
-                    <div class="gallery-item" data-type="Débroussaillage" data-date="2024">
-                        <img src="debrouss.jpg" alt="Débroussaillage">
+                    <div class="gallery-item" data-type="Brush Clearing" data-date="2024">
+                        <img src="debrouss.jpg" alt="Brush Clearing">
                         <div class="gallery-info">
-                            <h2>Débroussaillage</h2>
+                            <h2>Brush Clearing</h2>
                         </div>
                     </div>
                 </a>
-                <!-- Chantier 3 -->
+                <!-- Project 3 -->
                 <a href="project-taille-soins.html" class="gallery-link">
-                    <div class="gallery-item" data-type="Taille et soins aux arbres" data-date="2024">
-                        <img src="taille.jpg" alt="Taille et soins aux arbres">
+                    <div class="gallery-item" data-type="Pruning and Tree Care" data-date="2024">
+                        <img src="taille.jpg" alt="Pruning and Tree Care">
                         <div class="gallery-info">
-                            <h2>Taille et soins aux arbres</h2>
+                            <h2>Pruning and Tree Care</h2>
                         </div>
                     </div>
                 </a>
-                <!-- Chantier 4 -->
+                <!-- Project 4 -->
                 <a href="project-creation.html" class="gallery-link">
-                    <div class="gallery-item" data-type="Création" data-date="2024">
-                        <img src="creation.jpg" alt="Création">
+                    <div class="gallery-item" data-type="Creation" data-date="2024">
+                        <img src="creation.jpg" alt="Creation">
                         <div class="gallery-info">
-                            <h2>Création</h2>
+                            <h2>Creation</h2>
                         </div>
                     </div>
                 </a>
@@ -78,17 +77,17 @@
         </section>
     </main>
 
-    <!-- Pied de page -->
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 L'Arbre Envie. Tous droits réservés.</p>
+        <p>&copy; 2024 L'Arbre Envie. All rights reserved.</p>
     </footer>
 
-    <!-- Script pour le changement de thème -->
+    <!-- Theme Toggle Script -->
     <script src="theme.js"></script>
 
-    <!-- Bouton de changement de thème -->
+    <!-- Theme Toggle Button -->
     <div id="theme-toggle">
-        <button id="theme-toggle-btn" title="Changer le thème">
+        <button id="theme-toggle-btn" title="Change Theme">
             <i class="bx bx-sun"></i>
         </button>
     </div>
