--- a/selectpayement.html
+++ b/selectpayement.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <title>Choix du Paiement</title>
+    <title>Select Payment</title>
     <link rel="stylesheet" href="selectpayement.css">
 </head>
 
 <body>
 
-    <!-- Étapes de progression -->
+    <!-- Progress Steps -->
     <div class="progress-bar">
         <div class="progress-step">
             <i class="bx bx-calendar"></i>
-            <p>Sélectionner la date</p>
+            <p>Select Date</p>
         </div>
         <div class="progress-step">
             <i class="bx bx-check-circle"></i>
@@ -23,33 +23,33 @@
         </div>
         <div class="progress-step active">
             <i class="bx bx-credit-card"></i>
-            <p>Choix du paiement</p>
+            <p>Payment Choice</p>
         </div>
         <div class="progress-step">
             <i class="bx bx-money"></i>
-            <p>Paiement</p>
+            <p>Payment</p>
         </div>
         <div class="progress-step">
             <i class="bx bx-envelope"></i>
-            <p>Envoi du mail</p>
+            <p>Mail Sent</p>
         </div>
     </div>
 
-    <!-- Conteneur Principal -->
+    <!-- Main Container -->
     <div class="payment-container">
-        <h1 class="payment-title">Choisissez votre méthode de paiement</h1>
+        <h1 class="payment-title">Choose Your Payment Method</h1>
         <div class="payment-options">
-            <a href="payementCB.html" class="payment-button">Paiement par Carte</a>
-            <a href="payementPaypal.html" class="payment-button">Paiement PayPal</a>
+            <a href="payementCB.html" class="payment-button">Credit Card Payment</a>
+            <a href="payementPaypal.html" class="payment-button">PayPal Payment</a>
         </div>
     </div>
 
-    <!-- Script pour le thème -->
+    <!-- Script for Theme -->
     <script src="theme.js"></script>
 
-    <!-- Bouton de changement de thème -->
+    <!-- Theme Toggle Button -->
     <div id="theme-toggle">
-        <button id="theme-toggle-btn" title="Changer le thème">
+        <button id="theme-toggle-btn" title="Change Theme">
             <i class="bx bx-sun"></i>
         </button>
     </div>
