--- a/terms.html
+++ b/terms.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conditions Générales de Vente</title>
+    <title>Terms and Conditions</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="terms.css">
 </head>
+
 <body>
 
-    <!-- Sélecteur de langue -->
+    <!-- Language Selector -->
     <div class="language-selector">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg" alt="Français" id="lang-fr" title="Français">
-        <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg" alt="Anglais" id="lang-en" title="English">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg" alt="French" id="lang-fr" title="French">
+        <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/Flag_of_the_United_Kingdom.svg" alt="English" id="lang-en" title="English">
     </div>
 
-    <!-- En-tête -->
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li><a href="actualites.html">Green News</a></li>
                 <li>
                     <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
                     <a id="user-link"><i class="bx bxs-user-circle"></i></a>
@@ -37,71 +39,70 @@
 
     <main>
         <section class="terms-conditions">
-            <h1>Conditions Générales de Vente (CGV)</h1>
-            <p><strong>Version mise à jour : 14 décembre 2024</strong></p>
-            <p>Les présentes conditions générales de vente (CGV) régissent la vente en ligne des produits proposés par <strong>L'Arbre Envie</strong> sur son site web <strong>www.arbreenvie.fr</strong>. En validant sa commande, le client accepte sans réserve les présentes conditions. Celles-ci sont rédigées conformément aux exigences légales en vigueur et peuvent être modifiées à tout moment. Il est conseillé au client de les consulter régulièrement.</p>
+            <h1>General Terms and Conditions of Sale (GTCS)</h1>
+            <p><strong>Updated version: December 14, 2024</strong></p>
+            <p>These General Terms and Conditions of Sale (GTCS) govern the online sale of products offered by <strong>L'Arbre Envie</strong> on its website <strong>www.arbreenvie.fr</strong>. By confirming their order, the customer accepts these terms without reservation. These terms are drafted in accordance with current legal requirements and may be modified at any time. Customers are advised to review them regularly.</p>
 
-            <h2>1. Objet des CGV</h2>
-            <p>Les présentes CGV ont pour objectif d'encadrer les relations contractuelles entre <strong>L'Arbre Envie</strong> et ses clients, qu'ils soient consommateurs (B2C) ou professionnels (B2B), dans le cadre de la vente en ligne de produits ou services.</p>
+            <h2>1. Purpose of the GTCS</h2>
+            <p>The purpose of these GTCS is to govern the contractual relationships between <strong>L'Arbre Envie</strong> and its customers, whether consumers (B2C) or professionals (B2B), in the context of online sales of products or services.</p>
 
-            <h2>2. Mentions légales</h2>
-            <p>Les conditions générales de vente doivent inclure les informations suivantes :</p>
+            <h2>2. Legal Information</h2>
+            <p>The General Terms and Conditions must include the following information:</p>
             <ul>
-                <li>Dénomination sociale de l'entreprise et forme juridique : L'Arbre Envie, SARL</li>
-                <li>Adresse de l'entreprise, y compris l'adresse de correspondance : 123 Rue de la Nature, 75000 Paris, France</li>
-                <li>Coordonnées pour contacter l'entreprise : Email : <a href="mailto:support@arbreenvie.fr">support@arbreenvie.fr</a>, Téléphone : +33 1 23 45 67 89</li>
-                <li>Numéro d'enregistrement ou SIRET : 123 456 789 00010</li>
-                <li>Identification de l’hébergeur du site et de la société éditrice : Hébergement par OVH, 2 rue Kellermann, 59100 Roubaix, France</li>
+                <li>Company name and legal form: L'Arbre Envie, SARL</li>
+                <li>Company address, including correspondence address: 123 Rue de la Nature, 75000 Paris, France</li>
+                <li>Contact details for the company: Email: <a href="mailto:support@arbreenvie.fr">support@arbreenvie.fr</a>, Phone: +33 1 23 45 67 89</li>
+                <li>Registration or SIRET number: 123 456 789 00010</li>
+                <li>Identification of the website host and publishing company: Hosted by OVH, 2 rue Kellermann, 59100 Roubaix, France</li>
             </ul>
 
-            <h2>3. Produits et Prix</h2>
-            <p><strong>Description des produits :</strong> Chaque produit est décrit avec précision sur le site, indiquant ses caractéristiques essentielles.</p>
-            <p><strong>Prix :</strong> Tous les prix sont indiqués en euros, toutes taxes comprises (TTC), et incluent les frais de traitement, mais ne couvrent pas les frais de livraison, qui sont précisés lors de la commande.</p>
-            <p><strong>Réductions et promotions :</strong> Les réductions appliquées sur les prix seront clairement indiquées, avec les conditions spécifiques d'application.</p>
+            <h2>3. Products and Prices</h2>
+            <p><strong>Product Description:</strong> Each product is accurately described on the website, indicating its essential characteristics.</p>
+            <p><strong>Prices:</strong> All prices are listed in euros, inclusive of all taxes (VAT included), and include processing fees, but do not cover delivery fees, which are specified at the time of the order.</p>
+            <p><strong>Discounts and Promotions:</strong> Discounts applied to prices will be clearly indicated, along with specific conditions of application.</p>
 
-            <h2>4. Modalités de commande et de paiement</h2>
-            <p><strong>Commandes :</strong> La commande peut être effectuée directement sur le site, en sélectionnant les produits et en suivant le processus d'achat.</p>
-            <p><strong>Paiement :</strong> Le client peut régler ses achats via divers moyens de paiement, tels que carte bancaire, PayPal, ou virement bancaire. Les modalités exactes seront précisées à l'étape de paiement.</p>
-            <p><strong>Sécurisation du paiement :</strong> Le site utilise des systèmes de sécurité pour garantir la protection des données bancaires des clients.</p>
+            <h2>4. Order and Payment Terms</h2>
+            <p><strong>Orders:</strong> Orders can be placed directly on the website by selecting the products and following the purchase process.</p>
+            <p><strong>Payment:</strong> Customers can pay for their purchases using various payment methods, such as credit card, PayPal, or bank transfer. Exact terms will be specified at the payment stage.</p>
+            <p><strong>Payment Security:</strong> The website uses security systems to protect customers' banking data.</p>
 
-            <h2>5. Livraison et Exécution du Contrat</h2>
-            <p><strong>Délais de livraison :</strong> Les délais de livraison sont indiqués sur le site et varient en fonction des produits et de la destination. Ces informations sont à titre indicatif et peuvent être modifiées en cas d'indisponibilité des produits.</p>
-            <p><strong>Droits de rétractation :</strong> Conformément à la loi, les consommateurs bénéficient d'un droit de rétractation de 14 jours à compter de la réception du produit. Si ce délai expire un samedi, un dimanche ou un jour férié, il est prolongé jusqu'au premier jour ouvrable suivant.</p>
+            <h2>5. Delivery and Contract Execution</h2>
+            <p><strong>Delivery Times:</strong> Delivery times are indicated on the website and vary depending on the products and destination. These times are indicative and may change in case of product unavailability.</p>
+            <p><strong>Right of Withdrawal:</strong> In accordance with the law, consumers have a 14-day withdrawal right from the receipt of the product. If this period ends on a Saturday, Sunday, or public holiday, it is extended to the next working day.</p>
 
-            <h2>6. Retours et Remboursements</h2>
-            <p><strong>Procédure de retour :</strong> Le client peut retourner un produit dans les 14 jours suivant la réception, à condition que le produit soit retourné dans son état d’origine, non ouvert et non utilisé. Les frais de retour sont à la charge du client, sauf en cas de défaut de conformité.</p>
-            <p><strong>Remboursements :</strong> Après réception et vérification du produit retourné, le remboursement sera effectué dans les 14 jours suivant l'acceptation du retour.</p>
+            <h2>6. Returns and Refunds</h2>
+            <p><strong>Return Procedure:</strong> Customers may return a product within 14 days of receipt, provided it is returned in its original, unopened, and unused condition. Return shipping costs are the customer's responsibility, except in cases of non-compliance.</p>
+            <p><strong>Refunds:</strong> After receipt and verification of the returned product, a refund will be processed within 14 days of accepting the return.</p>
 
-            <h2>7. Garanties</h2>
-            <p><strong>Garantie légale de conformité :</strong> Conformément à l'article L. 217-4 du Code de la consommation, le vendeur assure la garantie légale de conformité du produit. Si le produit est défectueux ou non conforme, le client peut demander la réparation ou le remplacement du produit, ou un remboursement.</p>
-            <p><strong>Garantie des vices cachés :</strong> En cas de défaut non apparent du produit, la garantie des vices cachés peut être invoquée.</p>
+            <h2>7. Warranties</h2>
+            <p><strong>Legal Guarantee of Conformity:</strong> In accordance with Article L. 217-4 of the Consumer Code, the seller ensures the legal guarantee of conformity of the product. If the product is defective or non-compliant, the customer may request repair, replacement, or refund.</p>
+            <p><strong>Hidden Defects Warranty:</strong> In the event of a non-apparent defect in the product, the hidden defects warranty may be invoked.</p>
 
-            <h2>8. Droit de rétractation</h2>
-            <p>Le client bénéficie d'un droit de rétractation de 14 jours, à compter du jour de la réception du produit. Si le produit est retourné dans les 14 jours suivants la réception, il sera remboursé dans un délai de 14 jours.</p>
-            <p><strong>Exceptions :</strong> Certains produits, tels que les produits personnalisés, les CD/DVD ouverts, ou les produits périssables, ne sont pas soumis à ce droit de rétractation.</p>
+            <h2>8. Right of Withdrawal</h2>
+            <p>Customers have a 14-day withdrawal right from the date of receiving the product. If returned within 14 days, the product will be refunded within 14 days.</p>
+            <p><strong>Exceptions:</strong> Certain products, such as personalized items, opened CDs/DVDs, or perishable goods, are not subject to this withdrawal right.</p>
 
-            <h2>9. Protection des données personnelles</h2>
-            <p><strong>Collecte des données :</strong> L'Arbre Envie collecte des données personnelles pour traiter les commandes et améliorer l'expérience client. Conformément à la loi Informatique et Libertés, le client peut accéder, modifier, ou supprimer ses données à tout moment.</p>
-            <p><strong>Politique de confidentialité :</strong> Une politique détaillée sur la gestion des données personnelles et l'utilisation des cookies est disponible sur notre site.</p>
+            <h2>9. Personal Data Protection</h2>
+            <p><strong>Data Collection:</strong> L'Arbre Envie collects personal data to process orders and improve the customer experience. In accordance with the Data Protection Act, customers can access, modify, or delete their data at any time.</p>
+            <p><strong>Privacy Policy:</strong> A detailed policy on personal data management and cookie usage is available on our website.</p>
 
-            <h2>10. Litiges et Médiation</h2>
-            <p>En cas de litige, le client peut recourir à une médiation de la consommation. Les coordonnées du médiateur de la consommation sont disponibles sur notre site.</p>
-            <p>En cas de contentieux, les juridictions compétentes seront celles du domicile du consommateur.</p>
+            <h2>10. Disputes and Mediation</h2>
+            <p>In case of disputes, customers may resort to consumer mediation. The mediator's contact details are available on our website.</p>
+            <p>In the event of litigation, competent courts will be those of the consumer's domicile.</p>
 
-            <h2>11. Acceptation des CGV</h2>
-            <p>En procédant à l'achat, le client reconnaît avoir pris connaissance des présentes conditions générales de vente et les accepter sans réserve. Il lui sera demandé de cocher une case confirmant cette acceptation avant la validation de sa commande.</p>
+            <h2>11. Acceptance of the GTCS</h2>
+            <p>By making a purchase, the customer acknowledges having read and accepted these General Terms and Conditions of Sale without reservation. Customers will be required to check a box confirming this acceptance before validating their order.</p>
 
-            <h2>12. Modification des CGV</h2>
-            <p>L'Arbre Envie se réserve le droit de modifier les conditions générales de vente à tout moment. Les clients seront informés de toute mise à jour par le biais de l'interface du site, et ces nouvelles conditions prendront effet dès leur publication.</p>
+            <h2>12. Modification of the GTCS</h2>
+            <p>L'Arbre Envie reserves the right to modify the General Terms and Conditions of Sale at any time. Customers will be informed of any updates through the site interface, and these new terms will take effect upon publication.</p>
 
-            <h2>Contact :</h2>
-            <p>Pour toute question concernant les présentes conditions générales de vente, veuillez nous contacter à <a href="mailto:support@arbreenvie.fr">support@arbreenvie.fr</a> ou au +33 1 23 45 67 89.</p>
-
+            <h2>Contact:</h2>
+            <p>For any questions regarding these General Terms and Conditions of Sale, please contact us at <a href="mailto:support@arbreenvie.fr">support@arbreenvie.fr</a> or at +33 1 23 45 67 89.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 L'Arbre Envie - Tous droits réservés</p>
+        <p>&copy; 2024 L'Arbre Envie - All rights reserved</p>
     </footer>
 
 </body>
