--- a/confidentialite.html
+++ b/confidentialite.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paramètres de Confidentialité</title>
+    <title>Privacy Settings</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="confidentialite.css">
 </head>
 <body>
-    <!-- En-tête -->
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li><a href="actualites.html">Green News</a></li>
                 <li>
                     <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
                     <a id="user-link"><i class="bx bxs-user-circle"></i></a>
@@ -28,21 +28,21 @@
         </nav>
     </header>
 
-    <!-- Contenu principal -->
+    <!-- Main Content -->
     <main>
         <div class="privacy-container">
             <a href="myaccount.html" class="back-arrow"><i class="bx bx-undo"></i></a>
-            <h1>Paramètres de Confidentialité</h1>
-            <p>Gérez vos préférences de confidentialité ci-dessous :</p>
+            <h1>Privacy Settings</h1>
+            <p>Manage your privacy preferences below:</p>
             <div class="privacy-option">
-                <label for="cookies">Activer les Cookies :</label>
+                <label for="cookies">Enable Cookies:</label>
                 <input type="checkbox" id="cookies">
             </div>
             <div class="privacy-option">
-                <p>Consultez notre <a href="privacy-policy.html">Politique de Confidentialité</a> pour en savoir plus sur la manière dont nous collectons et utilisons vos données personnelles.</p>
+                <p>Check our <a href="privacy-policy.html">Privacy Policy</a> to learn more about how we collect and use your personal data.</p>
             </div>
             <div class="privacy-option">
-                <p>Consultez nos <a href="terms.html">Conditions Générales d'Utilisation</a> pour comprendre les termes relatifs à l'utilisation de notre service.</p>
+                <p>Read our <a href="terms.html">Terms and Conditions</a> to understand the terms related to using our service.</p>
             </div>
         </div>
     </main>
