--- a/modif.html
+++ b/modif.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modifier mes informations</title>
+    <title>Update My Information</title>
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="modif.css"> 
 </head>
 <body>
-    <!-- Barre de navigation -->
+    <!-- Navigation bar -->
     <header class="top-bar">
         <div class="logo">
             <img src="logo.png" alt="Logo" class="logo-image">
         </div>
     </header>
 
-    <!-- Contenu principal -->
+    <!-- Main content -->
     <main class="main-content">
         <section class="form-section">
             <div class="title-container">
-                <!-- Flèche de retour -->
+                <!-- Back arrow -->
                 <a href="myaccount.html" class="undo-link">
                     <i class="bx bx-undo"></i>
                 </a>
-                <h2>Modifier mes Informations</h2>
+                <h2>Update My Information</h2>
             </div>
             
             <form id="modif-form">
-                <label for="username">Nom :</label>
+                <label for="username">Name:</label>
                 <input type="text" id="username" name="username" required>
 
-                <label for="email">Email :</label>
+                <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
 
-                <button type="submit" class="submit-btn"> Valider la modification</button>
+                <button type="submit" class="submit-btn">Submit Update</button>
             </form>
             <p id="message" class="message"></p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 L'Arbre Envie - Tous droits réservés</p>
+        <p>&copy; 2024 L'Arbre Envie - All rights reserved</p>
     </footer>
     
    
