--- a/project-debrous.html
+++ b/project-debrous.html
@@ -1,98 +1,95 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Débroussaillage</title>
+    <title>Brush Clearing</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="project-debrous.css">
 </head>
 
 <body>
 
-    <!-- En-tête -->
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li><a href="actualites.html">Green News</a></li>
                 <li>
                     <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
-                    <a id="user-link"><i class="bx bxs-user-circle"></i></a>
-                </li>
+                    <a href="connection.html"><i class="bx bxs-user-circle"></i></a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <!-- Contenu principal -->
+    <!-- Main Content -->
     <main>
         <article>
             <h1>
                 <a href="project.html" class="undo-button">
                     <i class="bx bx-undo"></i>
                 </a>
-                Débroussaillage
+                Brush Clearing
             </h1>
-            <p>Découvrez les services de débroussaillage proposés par L'Arbre Envie.</p>
+            <p>Discover the brush clearing services offered by L'Arbre Envie.</p>
             <p>
-                L'Arbre Envie réalise le débroussaillage pour sécuriser et entretenir vos terrains dans le cadre de l'Obligation Légale de Débroussaillage :
+                L'Arbre Envie performs brush clearing to secure and maintain your land as part of the Legal Obligation of Clearing:
             </p>
             <ul>
-                <li>Broyage des herbes hautes, broussailles et végétaux indésirables</li>
-                <li>Suppression des branches basses (&lt;2.5m)</li>
-                <li>Sélection et suppression des arbres et arbustes à proximité des bâtiments</li>
-                <li>Broyage sur place des végétaux et répartition du mulch</li>
+                <li>Mulching of tall grass, shrubs, and unwanted vegetation</li>
+                <li>Removal of low branches (&lt;2.5m)</li>
+                <li>Selection and removal of trees and shrubs near buildings</li>
+                <li>On-site mulching and spreading of plant material</li>
             </ul>
         </article>
 
-        <!-- Carrousel -->
+        <!-- Carousel -->
         <section class="carousel-container">
-            <h2>Nos Réalisations</h2>
+            <h2>Our Work</h2>
             <div class="carousel-wrapper">
                 <div class="carousel">
                     <div class="carousel-item">
-                        <img src="debrouss1.jpg" alt="Débroussaillage 1">
+                        <img src="debrouss1.jpg" alt="Brush Clearing 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="debrouss2.jpg" alt="Débroussaillage 2">
+                        <img src="debrouss2.jpg" alt="Brush Clearing 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="debrouss3.jpg" alt="Débroussaillage 3">
+                        <img src="debrouss3.jpg" alt="Brush Clearing 3">
                     </div>
                     <div class="carousel-item">
-                        <img src="debrouss4.jpg" alt="Débroussaillage 4">
+                        <img src="debrouss4.jpg" alt="Brush Clearing 4">
                     </div>
                     <div class="carousel-item">
-                        <img src="debrouss5.jpg" alt="Débroussaillage 5">
+                        <img src="debrouss5.jpg" alt="Brush Clearing 5">
                     </div>
                 </div>
             </div>
-            <!-- Flèches de navigation -->
+            <!-- Navigation Arrows -->
             <button class="carousel-prev"><i class="bx bx-chevron-left"></i></button>
             <button class="carousel-next"><i class="bx bx-chevron-right"></i></button>
         </section>
     </main>
 
-   
-
-    <!-- Script pour le carrousel -->
+    <!-- Carousel Script -->
     <script>
         const carousel = document.querySelector(".carousel");
         const prevBtn = document.querySelector(".carousel-prev");
         const nextBtn = document.querySelector(".carousel-next");
         const carouselItems = document.querySelectorAll(".carousel-item");
-        const itemWidth = carouselItems[0].offsetWidth + 20; // Ajustement avec l'espacement
+        const itemWidth = carouselItems[0].offsetWidth + 20; // Adjusted for spacing
         let currentPosition = 0;
 
-        // Clone les éléments pour créer l'effet de boucle infinie
+        // Clone items for infinite loop effect
         carousel.innerHTML += carousel.innerHTML;
 
         const moveCarousel = (direction) => {
@@ -122,24 +119,18 @@
         carousel.addEventListener("mouseout", () => (autoSlide = setInterval(() => moveCarousel(1), 3000)));
     </script>
 
-   <!-- Pied de page -->
-   <footer>
-    <p>&copy; 2024 L'Arbre Envie. Tous droits réservés.</p>
-</footer>
-<script src="theme.js"></script>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 L'Arbre Envie. All rights reserved.</p>
+    </footer>
+    <script src="theme.js"></script>
 
-   <!-- Bouton de changement de thème -->
-   <div id="theme-toggle">
-    <button id="theme-toggle-btn" title="Changer le thème">
-        <i class="bx bx-sun"></i>
-    </button>
-</div>
-<script src="auth.js"></script>
-<script>
-    document.addEventListener("DOMContentLoaded", () => {
-        checkUserLink("user-link");
-    });
-</script>
+    <!-- Theme Toggle Button -->
+    <div id="theme-toggle">
+        <button id="theme-toggle-btn" title="Change Theme">
+            <i class="bx bx-sun"></i>
+        </button>
+    </div>
 
 </body>
 
