--- a/project-entretient.html
+++ b/project-entretient.html
@@ -1,98 +1,95 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entretien de Jardin</title>
+    <title>Garden Maintenance</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="project-entretient.css">
 </head>
 
 <body>
 
-    <!-- En-tête -->
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li><a href="actualites.html">Green News</a></li>
                 <li>
                     <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
-                    <a id="user-link"><i class="bx bxs-user-circle"></i></a>
-                </li>
+                    <a href="connection.html"><i class="bx bxs-user-circle"></i></a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <!-- Contenu principal -->
+    <!-- Main Content -->
     <main>
         <article>
             <h1>
                 <a href="project.html" class="undo-button">
                     <i class="bx bx-undo"></i>
                 </a>
-                Entretien de Jardin
+                Garden Maintenance
             </h1>
-            <p>Découvrez les services d'entretien de jardin proposés par L'Arbre Envie.</p>
+            <p>Discover the garden maintenance services offered by L'Arbre Envie.</p>
             <p>
-                L'arbre Envie assure la remise en état et/ou l’entretien de votre jardin. Ci-dessous, quelques prestations proposées, mais la réalisation d'un devis précis et adapté à vos demandes sera réalisée lors d'une visite de votre jardin :
+                L'Arbre Envie ensures the restoration and/or maintenance of your garden. Below are some of the services offered. A precise and tailored quote based on your needs will be provided during a visit to your garden:
             </p>
             <ul>
-                <li>Tonte/Débroussaillage</li>
-                <li>Taille de haie</li>
-                <li>Taille d'entretien des arbustes de massif</li>
-                <li>Désherbage manuel (massif, allée, terrain de boule)</li>
-                <li>Création, remise en état et modification d’arrosage automatique (goutte-à-goutte ou aspersion)</li>
-                <li>Nettoyage général (feuilles mortes, etc.)</li>
-                <li>Broyage et/ou évacuation des déchets verts</li>
-                <li>Mulching de sol et des massifs (pose d'une couche de broyat de végétaux)</li>
+                <li>Mowing/Brush Clearing</li>
+                <li>Hedge Trimming</li>
+                <li>Maintenance Pruning of Shrubs</li>
+                <li>Manual Weeding (flower beds, walkways, boules court)</li>
+                <li>Creation, restoration, and modification of automatic irrigation (drip or sprinkler)</li>
+                <li>General Cleaning (dead leaves, etc.)</li>
+                <li>Mulching and/or Disposal of Green Waste</li>
+                <li>Soil and Flower Bed Mulching (laying a layer of plant mulch)</li>
             </ul>
         </article>
 
         <!-- Carousel -->
         <section class="carousel-container">
-            <h2>Nos Réalisations</h2>
+            <h2>Our Work</h2>
             <div class="carousel-wrapper">
                 <div class="carousel">
-                    <div class="carousel-item"><img src="entretient1.jpg" alt="Réalisation 1"></div>
-                    <div class="carousel-item"><img src="entretient2.jpg" alt="Réalisation 2"></div>
-                    <div class="carousel-item"><img src="entretient3.jpg" alt="Réalisation 3"></div>
-                    <div class="carousel-item"><img src="entretient4.jpg" alt="Réalisation 4"></div>
-                    <div class="carousel-item"><img src="entretient5.jpg" alt="Réalisation 5"></div>
+                    <div class="carousel-item"><img src="entretient1.jpg" alt="Work 1"></div>
+                    <div class="carousel-item"><img src="entretient2.jpg" alt="Work 2"></div>
+                    <div class="carousel-item"><img src="entretient3.jpg" alt="Work 3"></div>
+                    <div class="carousel-item"><img src="entretient4.jpg" alt="Work 4"></div>
+                    <div class="carousel-item"><img src="entretient5.jpg" alt="Work 5"></div>
                 </div>
             </div>
-            <!-- Flèches de navigation -->
+            <!-- Navigation Arrows -->
             <button class="carousel-prev"><i class="bx bx-chevron-left"></i></button>
             <button class="carousel-next"><i class="bx bx-chevron-right"></i></button>
         </section>
     </main>
 
-   
-
-    <!-- Script pour le carrousel infini -->
+    <!-- Infinite Carousel Script -->
     <script>
         const carousel = document.querySelector('.carousel');
         const prevBtn = document.querySelector('.carousel-prev');
         const nextBtn = document.querySelector('.carousel-next');
         const items = document.querySelectorAll('.carousel-item');
-        const itemWidth = items[0].offsetWidth + 20; // Largeur + marge
+        const itemWidth = items[0].offsetWidth + 20; // Width + margin
         let currentPosition = 0;
 
-        // Duplication pour effet infini
+        // Clone items for infinite effect
         const firstClone = items[0].cloneNode(true);
         const lastClone = items[items.length - 1].cloneNode(true);
         carousel.appendChild(firstClone);
         carousel.insertBefore(lastClone, carousel.firstChild);
 
-        const totalItems = items.length + 2; // Compte les clones
+        const totalItems = items.length + 2; // Including clones
         currentPosition = itemWidth;
         carousel.style.transform = `translateX(-${currentPosition}px)`;
 
@@ -118,30 +115,24 @@
         nextBtn.addEventListener('click', () => moveCarousel(1));
         prevBtn.addEventListener('click', () => moveCarousel(-1));
 
-        // Auto-défilement
+        // Auto-slide
         let autoSlide = setInterval(() => moveCarousel(1), 3000);
         carousel.addEventListener('mouseover', () => clearInterval(autoSlide));
         carousel.addEventListener('mouseout', () => (autoSlide = setInterval(() => moveCarousel(1), 3000)));
     </script>
 
-    <!-- Pied de page -->
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 L'Arbre Envie. Tous droits réservés.</p>
+        <p>&copy; 2024 L'Arbre Envie. All rights reserved.</p>
     </footer>
     <script src="theme.js"></script>
 
-       <!-- Bouton de changement de thème -->
-       <div id="theme-toggle">
-        <button id="theme-toggle-btn" title="Changer le thème">
+    <!-- Theme Toggle Button -->
+    <div id="theme-toggle">
+        <button id="theme-toggle-btn" title="Change Theme">
             <i class="bx bx-sun"></i>
         </button>
     </div>
-    <script src="auth.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            checkUserLink("user-link");
-        });
-    </script>
 
 </body>
 
