--- a/shop.html
+++ b/shop.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À propos de nous</title>
+    <title>About Us</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="shop.css">
 </head>
 
 <body>
 
-     <!-- En-tête -->
-     <header>
+    <!-- Header -->
+    <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li><a href="actualites.html">Green News</a></li>
                 <li>
                     <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
                     <a id="user-link"><i class="bx bxs-user-circle"></i></a>
@@ -30,22 +30,22 @@
             </ul>
         </nav>
     </header>
-    <!-- Conteneur des catégories de la boutique -->
+    <!-- Shop Categories Container -->
     <main>
         <section class="categories-container">
-            <!-- Catégorie : Plant Soil -->
+            <!-- Category: Plant Soil -->
             <a href="cat1.html" class="category-card">
                 <img src="terre.png" alt="Plant Soil">
                 <div class="category-title">Plant Soil</div>
             </a>
 
-            <!-- Catégorie : Garden Tools -->
+            <!-- Category: Garden Tools -->
             <a href="cat2.html" class="category-card">
                 <img src="outils.jpg" alt="Garden tools">
-                <div class="category-title">Garden's Tools</div>
+                <div class="category-title">Garden Tools</div>
             </a>
 
-            <!-- Catégorie : Loppers -->
+            <!-- Category: Loppers -->
             <a href="cat3.html" class="category-card">
                 <img src="tronco.jpg" alt="Loppers">
                 <div class="category-title">Loppers</div>
@@ -53,15 +53,15 @@
         </section>
     </main>
 
-    <!-- Pied de page -->
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 L'Arbre Envie. Tous droits réservés.</p>
+        <p>&copy; 2024 L'Arbre Envie. All rights reserved.</p>
     </footer>
     <script src="theme.js"></script>
 
-       <!-- Bouton de changement de thème -->
-       <div id="theme-toggle">
-        <button id="theme-toggle-btn" title="Changer le thème">
+    <!-- Theme Toggle Button -->
+    <div id="theme-toggle">
+        <button id="theme-toggle-btn" title="Change Theme">
             <i class="bx bx-sun"></i>
         </button>
     </div>
@@ -71,9 +71,6 @@
             checkUserLink("user-link");
         });
     </script>
-    </body>
-    </html>
-    
 </body>
 
 </html>
